// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnBoardingTaxScreen OnBoardingTaxScreen renders as expected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "t": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "t": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`OnBoardingTaxScreen OnBoardingTaxScreen renders as expected with language 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    i18n={
      Object {
        "language": "de",
      }
    }
    navigation={
      Object {
        "dispatch": [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "i18n": Object {
        "language": "de",
      },
      "navigation": Object {
        "dispatch": [Function],
      },
      "t": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "i18n": Object {
          "language": "de",
        },
        "navigation": Object {
          "dispatch": [Function],
        },
        "t": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`OnBoardingTaxScreen OnBoardingTaxScreen renders as expected with language with dive() 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OnBoardingTaxScreenInner
    i18n={
      Object {
        "language": "de",
        "t": "test",
      }
    }
    navigation={
      Object {
        "dispatch": [Function],
      }
    }
    t={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "alignItems": "center",
            }
          }
        >
          <OnBoardingParagraph
            text=""
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#4a4a4a",
                "fontFamily": "roboto_regular",
                "fontSize": 56.57142857142857,
                "paddingVertical": 7.857142857142857,
              }
            }
          >
            7.7%
          </Text>
          <OnBoardingParagraph
            text=""
          />
        </View>,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#DC0018",
                "fontFamily": "roboto_medium",
                "fontSize": 22,
              }
            }
          >
            
          </Text>
        </TouchableOpacity>,
        <DoneButton
          onPress={[Function]}
        />,
        <Unknown
          onPress={[Function]}
          text=""
        />,
        <Unknown
          modalVisible={false}
          navigation={
            Object {
              "dispatch": [Function],
            }
          }
          onConfirm={[Function]}
          onPressLegal={[Function]}
          toggleModalVisible={[Function]}
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <OnBoardingParagraph
              text=""
            />,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": "roboto_regular",
                  "fontSize": 56.57142857142857,
                  "paddingVertical": 7.857142857142857,
                }
              }
            >
              7.7%
            </Text>,
            <OnBoardingParagraph
              text=""
            />,
          ],
          "style": Object {
            "alignItems": "center",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "7.7%",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "#4a4a4a",
                "fontFamily": "roboto_regular",
                "fontSize": 56.57142857142857,
                "paddingVertical": 7.857142857142857,
              },
            },
            "ref": null,
            "rendered": "7.7%",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#DC0018",
                "fontFamily": "roboto_medium",
                "fontSize": 22,
              }
            }
          >
            
          </Text>,
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#DC0018",
              "fontFamily": "roboto_medium",
              "fontSize": 22,
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [Function],
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "modalVisible": false,
          "navigation": Object {
            "dispatch": [Function],
          },
          "onConfirm": [Function],
          "onPressLegal": [Function],
          "toggleModalVisible": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
              }
            }
          >
            <OnBoardingParagraph
              text=""
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": "roboto_regular",
                  "fontSize": 56.57142857142857,
                  "paddingVertical": 7.857142857142857,
                }
              }
            >
              7.7%
            </Text>
            <OnBoardingParagraph
              text=""
            />
          </View>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#DC0018",
                  "fontFamily": "roboto_medium",
                  "fontSize": 22,
                }
              }
            >
              
            </Text>
          </TouchableOpacity>,
          <DoneButton
            onPress={[Function]}
          />,
          <Unknown
            onPress={[Function]}
            text=""
          />,
          <Unknown
            modalVisible={false}
            navigation={
              Object {
                "dispatch": [Function],
              }
            }
            onConfirm={[Function]}
            onPressLegal={[Function]}
            toggleModalVisible={[Function]}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <OnBoardingParagraph
                text=""
              />,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#4a4a4a",
                    "fontFamily": "roboto_regular",
                    "fontSize": 56.57142857142857,
                    "paddingVertical": 7.857142857142857,
                  }
                }
              >
                7.7%
              </Text>,
              <OnBoardingParagraph
                text=""
              />,
            ],
            "style": Object {
              "alignItems": "center",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "7.7%",
                "ellipsizeMode": "tail",
                "style": Object {
                  "color": "#4a4a4a",
                  "fontFamily": "roboto_regular",
                  "fontSize": 56.57142857142857,
                  "paddingVertical": 7.857142857142857,
                },
              },
              "ref": null,
              "rendered": "7.7%",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#DC0018",
                  "fontFamily": "roboto_medium",
                  "fontSize": 22,
                }
              }
            >
              
            </Text>,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "#DC0018",
                "fontFamily": "roboto_medium",
                "fontSize": 22,
              },
            },
            "ref": null,
            "rendered": "",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [Function],
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "modalVisible": false,
            "navigation": Object {
              "dispatch": [Function],
            },
            "onConfirm": [Function],
            "onPressLegal": [Function],
            "toggleModalVisible": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`OnBoardingTaxScreen You can click on DoneButton 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OnBoardingTaxScreenInner
    i18n={
      Object {
        "language": "de",
        "t": "test",
      }
    }
    navigation={
      Object {
        "dispatch": [Function],
      }
    }
    t={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "alignItems": "center",
            }
          }
        >
          <OnBoardingParagraph
            text=""
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#4a4a4a",
                "fontFamily": "roboto_regular",
                "fontSize": 56.57142857142857,
                "paddingVertical": 7.857142857142857,
              }
            }
          >
            7.7%
          </Text>
          <OnBoardingParagraph
            text=""
          />
        </View>,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#DC0018",
                "fontFamily": "roboto_medium",
                "fontSize": 22,
              }
            }
          >
            
          </Text>
        </TouchableOpacity>,
        <DoneButton
          onPress={[Function]}
        />,
        <Unknown
          onPress={[Function]}
          text=""
        />,
        <Unknown
          modalVisible={false}
          navigation={
            Object {
              "dispatch": [Function],
            }
          }
          onConfirm={[Function]}
          onPressLegal={[Function]}
          toggleModalVisible={[Function]}
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <OnBoardingParagraph
              text=""
            />,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": "roboto_regular",
                  "fontSize": 56.57142857142857,
                  "paddingVertical": 7.857142857142857,
                }
              }
            >
              7.7%
            </Text>,
            <OnBoardingParagraph
              text=""
            />,
          ],
          "style": Object {
            "alignItems": "center",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "7.7%",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "#4a4a4a",
                "fontFamily": "roboto_regular",
                "fontSize": 56.57142857142857,
                "paddingVertical": 7.857142857142857,
              },
            },
            "ref": null,
            "rendered": "7.7%",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#DC0018",
                "fontFamily": "roboto_medium",
                "fontSize": 22,
              }
            }
          >
            
          </Text>,
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#DC0018",
              "fontFamily": "roboto_medium",
              "fontSize": 22,
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [Function],
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "modalVisible": false,
          "navigation": Object {
            "dispatch": [Function],
          },
          "onConfirm": [Function],
          "onPressLegal": [Function],
          "toggleModalVisible": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
              }
            }
          >
            <OnBoardingParagraph
              text=""
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": "roboto_regular",
                  "fontSize": 56.57142857142857,
                  "paddingVertical": 7.857142857142857,
                }
              }
            >
              7.7%
            </Text>
            <OnBoardingParagraph
              text=""
            />
          </View>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#DC0018",
                  "fontFamily": "roboto_medium",
                  "fontSize": 22,
                }
              }
            >
              
            </Text>
          </TouchableOpacity>,
          <DoneButton
            onPress={[Function]}
          />,
          <Unknown
            onPress={[Function]}
            text=""
          />,
          <Unknown
            modalVisible={false}
            navigation={
              Object {
                "dispatch": [Function],
              }
            }
            onConfirm={[Function]}
            onPressLegal={[Function]}
            toggleModalVisible={[Function]}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <OnBoardingParagraph
                text=""
              />,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#4a4a4a",
                    "fontFamily": "roboto_regular",
                    "fontSize": 56.57142857142857,
                    "paddingVertical": 7.857142857142857,
                  }
                }
              >
                7.7%
              </Text>,
              <OnBoardingParagraph
                text=""
              />,
            ],
            "style": Object {
              "alignItems": "center",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "7.7%",
                "ellipsizeMode": "tail",
                "style": Object {
                  "color": "#4a4a4a",
                  "fontFamily": "roboto_regular",
                  "fontSize": 56.57142857142857,
                  "paddingVertical": 7.857142857142857,
                },
              },
              "ref": null,
              "rendered": "7.7%",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#DC0018",
                  "fontFamily": "roboto_medium",
                  "fontSize": 22,
                }
              }
            >
              
            </Text>,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "#DC0018",
                "fontFamily": "roboto_medium",
                "fontSize": 22,
              },
            },
            "ref": null,
            "rendered": "",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [Function],
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "modalVisible": false,
            "navigation": Object {
              "dispatch": [Function],
            },
            "onConfirm": [Function],
            "onPressLegal": [Function],
            "toggleModalVisible": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`OnBoardingTaxScreen You can click on SkipThisStep 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OnBoardingTaxScreenInner
    i18n={
      Object {
        "language": "de",
        "t": "test",
      }
    }
    navigation={
      Object {
        "dispatch": [Function],
      }
    }
    t={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "alignItems": "center",
            }
          }
        >
          <OnBoardingParagraph
            text=""
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#4a4a4a",
                "fontFamily": "roboto_regular",
                "fontSize": 56.57142857142857,
                "paddingVertical": 7.857142857142857,
              }
            }
          >
            7.7%
          </Text>
          <OnBoardingParagraph
            text=""
          />
        </View>,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#DC0018",
                "fontFamily": "roboto_medium",
                "fontSize": 22,
              }
            }
          >
            
          </Text>
        </TouchableOpacity>,
        <DoneButton
          onPress={[Function]}
        />,
        <Unknown
          onPress={[Function]}
          text=""
        />,
        <Unknown
          modalVisible={false}
          navigation={
            Object {
              "dispatch": [Function],
            }
          }
          onConfirm={[Function]}
          onPressLegal={[Function]}
          toggleModalVisible={[Function]}
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <OnBoardingParagraph
              text=""
            />,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": "roboto_regular",
                  "fontSize": 56.57142857142857,
                  "paddingVertical": 7.857142857142857,
                }
              }
            >
              7.7%
            </Text>,
            <OnBoardingParagraph
              text=""
            />,
          ],
          "style": Object {
            "alignItems": "center",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "7.7%",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "#4a4a4a",
                "fontFamily": "roboto_regular",
                "fontSize": 56.57142857142857,
                "paddingVertical": 7.857142857142857,
              },
            },
            "ref": null,
            "rendered": "7.7%",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#DC0018",
                "fontFamily": "roboto_medium",
                "fontSize": 22,
              }
            }
          >
            
          </Text>,
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#DC0018",
              "fontFamily": "roboto_medium",
              "fontSize": 22,
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [Function],
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "modalVisible": false,
          "navigation": Object {
            "dispatch": [Function],
          },
          "onConfirm": [Function],
          "onPressLegal": [Function],
          "toggleModalVisible": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
              }
            }
          >
            <OnBoardingParagraph
              text=""
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": "roboto_regular",
                  "fontSize": 56.57142857142857,
                  "paddingVertical": 7.857142857142857,
                }
              }
            >
              7.7%
            </Text>
            <OnBoardingParagraph
              text=""
            />
          </View>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#DC0018",
                  "fontFamily": "roboto_medium",
                  "fontSize": 22,
                }
              }
            >
              
            </Text>
          </TouchableOpacity>,
          <DoneButton
            onPress={[Function]}
          />,
          <Unknown
            onPress={[Function]}
            text=""
          />,
          <Unknown
            modalVisible={false}
            navigation={
              Object {
                "dispatch": [Function],
              }
            }
            onConfirm={[Function]}
            onPressLegal={[Function]}
            toggleModalVisible={[Function]}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <OnBoardingParagraph
                text=""
              />,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#4a4a4a",
                    "fontFamily": "roboto_regular",
                    "fontSize": 56.57142857142857,
                    "paddingVertical": 7.857142857142857,
                  }
                }
              >
                7.7%
              </Text>,
              <OnBoardingParagraph
                text=""
              />,
            ],
            "style": Object {
              "alignItems": "center",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "7.7%",
                "ellipsizeMode": "tail",
                "style": Object {
                  "color": "#4a4a4a",
                  "fontFamily": "roboto_regular",
                  "fontSize": 56.57142857142857,
                  "paddingVertical": 7.857142857142857,
                },
              },
              "ref": null,
              "rendered": "7.7%",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#DC0018",
                  "fontFamily": "roboto_medium",
                  "fontSize": 22,
                }
              }
            >
              
            </Text>,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "#DC0018",
                "fontFamily": "roboto_medium",
                "fontSize": 22,
              },
            },
            "ref": null,
            "rendered": "",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [Function],
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "modalVisible": false,
            "navigation": Object {
              "dispatch": [Function],
            },
            "onConfirm": [Function],
            "onPressLegal": [Function],
            "toggleModalVisible": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
